@@ -35,24 +35,16 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
-		<span><b>2020-07-20</b></span>
-		<div id="changelog20200704">
+		<span><b>2020-10-01</b></span>
+		<div id="changelog20201001">
 			<ul>
-				<li>Fixed Health Point computation</li>
-				<li>Fixed MDEF armor enchantment</li>
-				<li>Fixed The Ring of Nibelugen and Bragi formula</li>
-				<li>Added Ancient Tower and Elysian Garden monsters</li>
-				<li>Added Beach Towel, Cookie Hat and Black Tailed Ribbon</li>
-				<li>Fixed Triple Attack and Spiral Pierce damage computation</li>
-			</ul>
-		</div>
-		<br/>
-		<span><b>2020-06-21</b></span>
-		<div id="changelog20200621">
-			<ul>
-				<li>Fixed AR/FAR ASPD party buff</li>
-				<li>Fixed ASPD value for Katar on Assassin</li>
-				<li>Shield Chain now take into consideration class defense bypass</li>
+				<li>Added Bankruptcy set</li>
+				<li>Added Lost Dragon MvP</li>
+				<li>Added Summer Cocktails</li>
+				<li>Fixed Savage pet and Scuba Mask script</li>
+				<li>Fixed weapon and base attack bonus based</li>
+				<li>Fixed Apple of Idun and Berserk MaxHP formula</li>
+				<li>Fixed Assassin Cross of Sunset song ASDP formula</li>
 			</ul>
 		</div>
 	</div>
